# src/app/api/reservation/post/confirm/[id]/route.ts
@@ -1,5 +1,9 @@
 import { NextRequest, NextResponse } from "next/server";
 import Reservation from "@/src/models/reservationModel";
+import { reservationIdSchema } from "@/src/app/schemas/reservationSchema";
+import Room from "@/src/models/roomModel";
+import User from "@/src/models/userModel";
+import { handleError } from "@/src/utils/errorHandler";
 
 interface Context {
     params: Promise<{
@@ -11,17 +15,31 @@ export async function POST(
     request: NextRequest,
     context: Context
 ) {
-    const reqBody = await context.params;
-    const { id: reservationId } = reqBody;
+    try {
+        // if user's payment successful, the status will be confirmed 
+        const reqBody = await context.params;
+        const validatedDataReservationId = await reservationIdSchema.validate(reqBody, { abortEarly: false });
+        const { id: reservationId } = validatedDataReservationId;
 
-    const reservation = await Reservation.findById(reservationId);
-    if (!reservation || reservation.status !== "pending") {
-        return NextResponse.json({ message: "Reservation not found or already finalized" }, { status: 400 });
+        const reservation = await Reservation.findById(reservationId);
+        if (!reservation || reservation.status !== "pending") {
+            return NextResponse.json({ message: "Reservation not found or already finalized" }, { status: 400 });
+        }
+
+        reservation.status = "confirmed";
+        reservation.endingStatusTime = null;
+        await reservation.save();
+
+        await Room.findByIdAndUpdate(reservation.roomId, {
+            $push: { reservations: reservation._id }
+        });
+
+        await User.findByIdAndUpdate(reservation.userId, {
+            $push: { reservedRooms: reservation._id }
+        });
+
+        return NextResponse.json({ message: "Reservation confirmed" }, { status: 200 });
+    } catch (error) {
+        return handleError(error);
     }
-
-    reservation.status = "confirmed";
-    reservation.endingStatusTime = null;
-    await reservation.save();
-
-    return NextResponse.json({ message: "Reservation confirmed" });
 }
