# src/app/api/room/get/getbyid/[id]/route.ts
@@ -1,6 +1,4 @@
 import { roomIdSchema } from "@/src/app/schemas/roomSchemas";
-import Rating from "@/src/models/ratingModel";
-import Reservation from "@/src/models/reservationModel";
 import Room from "@/src/models/roomModel";
 import { handleError } from "@/src/utils/errorHandler";
 import { NextRequest, NextResponse } from "next/server";
@@ -20,26 +18,24 @@ export async function GET(
         const validatedData = await roomIdSchema.validate(reqBody, { abortEarly: false });
         const { id } = validatedData;
 
-        const room = await Room.findById(id);
-        if (!room) {
-            return NextResponse.json({ message: 'Room not found' }, { status: 404 });
-        }
-        const ratings = await Rating.find({ roomId: room._id });
-        const reservations = await Reservation.find({ roomId: room._id });
+        const room = await Room.findById(id)
+            .populate("reservations")
+            .populate("ratings");
 
-        return NextResponse.json(
-            {
-                name: room.name,
-                description: room.description,
-                images: room.images,
-                pricePerNight: room.pricePerNight,
-                reservations: reservations,
-                ratings: ratings,
-                averageRating: room.averageRating,
-                ratingCount: room.ratingCount,
-                isSoftDeleted: room.isSoftDeleted,
-                createdAt: room.createdAt,
-            }, { status: 200 });
+        if (!room) return NextResponse.json({ message: 'Room not found' }, { status: 404 });
+
+        return NextResponse.json({
+            name: room.name,
+            description: room.description,
+            images: room.images,
+            pricePerNight: room.pricePerNight,
+            reservations: room.reservations,
+            ratings: room.ratings,
+            averageRating: room.averageRating,
+            ratingCount: room.ratingCount,
+            isSoftDeleted: room.isSoftDeleted,
+            createdAt: room.createdAt,
+        }, { status: 200 });
     } catch (error: unknown) {
         return handleError(error)
     }
