# src/app/api/user/get/getbyid/[id]/route.ts
@@ -1,6 +1,4 @@
 import { userIdSchema } from "@/src/app/schemas/userSchemas";
-import Rating from "@/src/models/ratingModel";
-import Reservation from "@/src/models/reservationModel";
 import User from "@/src/models/userModel";
 import { handleError } from "@/src/utils/errorHandler";
 import { NextRequest, NextResponse } from "next/server";
@@ -20,12 +18,11 @@ export async function GET(
         const validatedData = await userIdSchema.validate(reqBody, { abortEarly: false });
         const { id } = validatedData;
 
-        const user = await User.findById(id);
-        if (!user) {
-            return NextResponse.json({ message: 'User not found' }, { status: 404 });
-        }
-        const ratings = await Rating.find({ userId: user._id });
-        const reservations = await Reservation.find({ userId: user._id });
+        const user = await User.findById(id)
+            .populate("reservations")
+            .populate("ratings");
+
+        if (!user) return NextResponse.json({ message: 'User not found' }, { status: 404 });
 
         return NextResponse.json(
             {
@@ -33,8 +30,8 @@ export async function GET(
                 lastname: user.lastname,
                 email: user.email,
                 isAdmin: user.isAdmin,
-                reservedRooms: reservations,
-                ratings: ratings,
+                reservedRooms: user.reservations,
+                ratings: user.ratings,
                 createdAt: user.createdAt
             }
             , { status: 200 });
